# tl_sumo_roundabout

./: README.md  final_project.pptx  main.py  myuasa2_Mikihisa_Yuasa_final_project.pptx  pyproject.toml  requirements.txt
config/: roundabout.sumocfg
configs/sumo/2_veh/: roundabout.add.xml  roundabout.net.xml  roundabout.rou.xml
tl_sumo_roundabout/: automaton.py  callback.py  conversion.py  env.py  evaluation.py  parser.py  plot.py  train.py  types.py  utils.py
