[tool.poetry]
name = "tl-sumo-roundabout"
version = "0.1.0"
description = ""
authors = ["Mikihisa Yuasa <mik0915yua@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "tl_sumo_roundabout"}]

[tool.poetry.dependencies]
python = "^3.10"
sumo-gym = {git = "https://github.com/Tran-Research-Group/sumo_gym.git", rev = "dev"}
spottl = {git = "https://github.com/Tran-Research-Group/spottl.git"}
stable-baselines3 = {git = "https://github.com/DLR-RM/stable-baselines3.git"}
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
